--- a/style.css
+++ b/style.css
@@ -1,15 +1,41 @@
 
 body {
     margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
+}
+
+.section-one,
+.section-two,
+.section-three,
+.section-four,
+.section-five, 
+.section-six,{
+    display: flex;
+    margin: 0px;
+    justify-content: center;
+}
+
+.section-one,
+.section-two,
+.section-six {
+    background-color: #1f2937;
+}
+
+.section-four {
+    background-color: #e5e7eb;
+}
+
+.section-five {
+    padding: 10px 400px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
-    color: white;
-    padding: 10px;
+    padding: 10px 400px;
+    font-size: 24px;
 }
 
 ul {
@@ -23,7 +49,51 @@ ul {
 
 a {
     text-decoration: none;
-    color: white;
+    color: #f9faf8;
+    font-size: 18px;
+}
+
+.hero {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 400px;
+}
+
+.information {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    padding: 10px 400px;
+}
+
+.card-block {
+    display: flex;
+    justify-content: space-between;
+}
+
+.mini-placeholder {
+    height: 100px;
+    width: 100px;
+    border: 3px solid #3882F6;
+    border-radius: 10px;
+}
+
+.quote-block {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-content: center;
+    padding: 10px 400px;
+}
+
+.blue-box {
+    display: flex;
+    border-radius: 20px;
+    padding: 15px 25px;
+    background-color: #3882F6;
+    color: #f9faf8;
+    gap: 50px;
 }
 
 .footer {
@@ -36,12 +106,40 @@ a {
 .footer,
 .hero {
     background-color: #1f2937;
-    color: white;
+    color: #f9faf8;
+    margin: 20px 0px;
 }
 
 .buttons {
     background-color: #3882F6;
+    height: 25px;
+    width: 75px;
     color: white;
     border: 1px solid white;
     border-radius: 5px;
+    align-self: center;
+}
+
+.placeholder {
+    height: 100px;
+    width: 300px;
+    background-color: #e5e7eb;
+    display: flex;
+}
+
+.quote,
+.speaker {
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+}
+
+.speaker {
+    text-align: end;
+    font-weight: 900;
+}
+
+.call {
+    display: flex;
+    justify-content: center;
 }
