--- a/style.css
+++ b/style.css
@@ -4,17 +4,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-}
-
-.section-one,
-.section-two,
-.section-three,
-.section-four,
-.section-five, 
-.section-six,{
-    display: flex;
-    margin: 0px;
-    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif, monospace;
 }
 
 .section-one,
@@ -28,14 +18,19 @@ body {
 }
 
 .section-five {
-    padding: 10px 400px;
+    padding: 40px 400px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     padding: 10px 400px;
-    font-size: 24px;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.logo {
+    font-weight: 900;
 }
 
 ul {
@@ -47,16 +42,32 @@ ul {
     gap: 10px;
 }
 
-a {
+a,
+.text {
     text-decoration: none;
     color: #f9faf8;
     font-size: 18px;
+    margin-bottom: 10px;
 }
 
 .hero {
     display: flex;
     justify-content: space-between;
     padding: 10px 400px;
+    margin: 40px 0px;
+}
+
+.website-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hero-header {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+    margin-bottom: 10px;
 }
 
 .information {
@@ -69,7 +80,17 @@ a {
 
 .card-block {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 25px;
+}
+
+.info-header {
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.cards {
+    width: 120px;
 }
 
 .mini-placeholder {
@@ -85,21 +106,27 @@ a {
     justify-content:center;
     align-content: center;
     padding: 10px 400px;
+    margin: 15px 150px;
 }
 
 .blue-box {
     display: flex;
-    border-radius: 20px;
-    padding: 15px 25px;
+    border-radius: 8px;
+    padding: 25px 100px;
     background-color: #3882F6;
     color: #f9faf8;
     gap: 50px;
+}
+
+.call-header {
+    font-weight: 900;
 }
 
 .footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 30px;
 }
 
 .header,
@@ -107,23 +134,25 @@ a {
 .hero {
     background-color: #1f2937;
     color: #f9faf8;
-    margin: 20px 0px;
 }
 
-.buttons {
+button {
     background-color: #3882F6;
     height: 25px;
     width: 75px;
     color: white;
-    border: 1px solid white;
     border-radius: 5px;
     align-self: center;
 }
 
+.signup-button {
+    border: 1px solid white;
+}
+
 .placeholder {
-    height: 100px;
-    width: 300px;
-    background-color: #e5e7eb;
+    height: 200px;
+    width: 500px;
+    background-color: #a8a8a8;
     display: flex;
 }
 
@@ -141,5 +170,6 @@ a {
 
 .call {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    flex-grow: 1;
 }
